@@ -947,3 +947,4 @@
  
 [v1.1.2p8b]
  - Bugfix: "normalizing" a CDockable that is part of a stack, but neither the first nor the second entry, and that was not part of a stack when it was "normal", could cause an IndexOutOfBoundsException
+ - Bugfix: Ignore RuntimeExceptions from Class.forName - some ClassLoaders do not like this method
